bugfix: change vertical nav collapsed width to match the actual width before menu text starts, else the text is partly visible

--- a/src/navigation/css/components/_honeycomb.navigation.components.vertical.scss
+++ b/src/navigation/css/components/_honeycomb.navigation.components.vertical.scss
@@ -75,7 +75,7 @@
 
 		&.nav--vertical--collapsed {
 			overflow: hidden;
-			width: 54px;
+			width: 52px;
 
 			& > ul {
 				width: 9999px;
